--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "test": "karma start",
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
+    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
+    "start": "npm install -g live-server && live-server --open=./index.html --port=8080"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
